# Part of measurement-kit <https://measurement-kit.github.io/>.
# Measurement-kit is free software. See AUTHORS and LICENSE for more
# information on the copying conditions.

AC_INIT(measurement-kit, 0.1.0, bassosimone@gmail.com)

AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
LT_INIT
AC_CONFIG_HEADERS([config.h])
AC_CANONICAL_HOST
AC_PROG_INSTALL
AC_PROG_CXX

MKPM_ARG_DISABLE_EXAMPLES
MKPM_ARG_ENABLE_TESTS
MKPM_ARG_ENABLE_COVERAGE

MKPM_REQUIRE_ZLIB
MKPM_REQUIRE_OPENSSL
MKPM_REQUIRE_LIBEVENT
MKPM_REQUIRE_LIBTOR
MKPM_REQUIRE_CXX11

MKPM_ADD_WARNINGS_TO_CXXFLAGS
MKPM_ADD_INCLUDE_TO_CPPFLAGS
MKPM_ADD_COVERAGE_FLAGS_IF_NEEDED

AC_CONFIG_FILES([Doxyfile Makefile])
AC_OUTPUT
MKPM_PRINT_SUMMARY
